--- a/st-serverless/serverless.yml
+++ b/st-serverless/serverless.yml
@@ -55,8 +55,17 @@ provider:
 #    - exclude-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  app:
+    handler: index.handler
+    events:
+      - http:
+          path: / # this matches the base path
+          method: ANY
+          cors: true
+      - http:
+          path: /{proxy+} # this matches any path
+          method: ANY
+          cors: true
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
