--- a/st-expo/package.json
+++ b/st-expo/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "^29.0.0",
+    "genomelink-node": "^0.1.3",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz"
   }
