--- a/st-serverless/package.json
+++ b/st-serverless/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "amazon-product-api": "^0.4.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "genomelink-node": "^0.1.3",
