--- a/st-serverless/package.json
+++ b/st-serverless/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "amazon-product-api": "^0.4.4",
     "express": "^4.16.3",
+    "express-async-await": "^1.1.0",
     "express-session": "^1.15.6",
     "genomelink-node": "^0.1.3",
     "serverless-http": "^1.6.0"
