--- a/st-expo/package.json
+++ b/st-expo/package.json
@@ -12,6 +12,7 @@
     "expo": "^29.0.0",
     "genomelink-node": "^0.1.3",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
+    "react-native-loading-spinner-overlay": "^0.5.2"
   }
 }
