--- a/st-expo/app.json
+++ b/st-expo/app.json
@@ -1,19 +1,17 @@
 {
   "expo": {
-    "name": "st-expo",
-    "description": "This project is really great.",
-    "slug": "st-expo",
+    "name": "Snacktime",
+    "description": "Personalized snacks from your DNA.",
+    "slug": "snacktime",
     "privacy": "public",
     "sdkVersion": "29.0.0",
-    "platforms": ["ios", "android"],
+    "platforms": ["android"],
+    "android": {
+      "package": "com.zachalam.snacktime"
+    },
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
