--- a/st-expo/package.json
+++ b/st-expo/package.json
@@ -13,6 +13,7 @@
     "genomelink-node": "^0.1.3",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
+    "react-native-fade-in-image": "^1.4.1",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-progress": "^3.5.0"
   }
